[package]
name = "mcmapper-rs"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2.3.2"
fastanvil = "0.26.0"
image = "0.24.5"
rayon = "1.6.1"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
overflow-checks = true
opt-level = 3
strip = true
debug-assertions = false
lto = true